[package]
name = "circle_payment_service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "*"
env_logger = "*"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.18"
openssl = "0.10.60"
hex = "0.4.3"
base64 = "0.20.0"
rand = "0.8"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }