[package]
name = "circle_api"
version = "0.1.0"
edition = "2021"
authors = ["Emil <emil@esnx.xyz>"]
description = "A library for interacting with the CircleCI API"
repository = "https://github.com/sssemil/circle_api"
readme = "README.md"
license = "MIT"
rust-version = "1.72.0"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "*"
env_logger = "*"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.18"
hex = "0.4.3"
base64 = "0.20.0"
rand = "0.8"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
rsa = { version = "0.9.4", features = ["pem", "std", "sha1", "sha2"] }
pkcs1 = { version = "0.7.5", features = ["pkcs8"] }
pkcs8 = "0.10.2"
sha2 = "0.10.8"

[[example]]
name = "wallet_set"
path = "examples/managed_wallet.rs"