[package]
name = "circle_api"
version = "0.1.1"
edition = "2021"
authors = ["Emil <emil@esnx.xyz>"]
description = "A library for interacting with the CircleCI API"
repository = "https://github.com/sssemil/circle_api"
readme = "README.md"
license = "MIT"
rust-version = "1.72.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_qs = "0.12.0"
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4.3"
base64 = "0.20.0"
rand = "0.8"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
rsa = { version = "0.9.4", features = ["pem", "std", "sha1", "sha2"] }
pkcs1 = { version = "0.7.5", features = ["pkcs8"] }
pkcs8 = "0.10.2"
sha2 = "0.10.8"
log = "0.4.20"
web3 = "0.19.0"

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.18"
env_logger = "0.10.1"
futures = "0.3.29"

[[example]]
name = "managed_wallet"
path = "examples/managed_wallet.rs"

[[example]]
name = "managed_wallet_existing"
path = "examples/managed_wallet_existing.rs"

[[example]]
name = "signing"
path = "examples/managed_wallet_signing.rs"
